--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,9 @@ channels:
   - bioconda
   - defaults
 dependencies:
+  - pip
+    - shinyswatch
+    - pyarrow
   - anndata=0.10.8
   - anyio=4.4.0
   - appdirs=1.4.4
